# floskl

./: README.md  docker-compose.yaml  gunicorn_config.py  prep-venv.sh  requirements.txt  start-dev-db.sh  stop-dev-db.sh
.devcontainer/: devcontainer.json
app/: gunicorn_config.py  pyproject.toml
app/floskl/: __init__.py  auth.py  blog.py  db.py
app/floskl/static/: style.css
app/floskl/templates/auth/: login.html  register.html
dev-db/: docker-compose.yaml
floskl/: __init__.py  auth.py  blog.py  db-sqlite.py
floskl/static/: style.css
floskl/templates/: base.html
