[project]
name = "floskl"
version = "1.0.0"
description = "A simple blog application implemented in Flask."

# Manage dependencies in a traditional requirements.txxt file:
# -> https://stackoverflow.com/a/73600610
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
